<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="activateService"
        android:summaryOff="@string/activate_summaryOff"
        android:summaryOn="@string/activate_summaryOn"
        android:title="@string/activate_reminder_service" />

    <de.ubuntix.android.birthdayreminder.view.preference.SummaryEditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:key="daysBeforeReminder"
        android:summary="You will be informed @value days before"
        android:title="@string/daysbefore" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="hideNotificationAfterConfirmation"
        android:summaryOff="@string/hideNotification_summaryOff"
        android:summaryOn="@string/hideNotification_summaryOn"
        android:title="@string/hideNotification" />

    <de.ubuntix.android.birthdayreminder.view.preference.TimePickerPreference
        android:defaultValue="09:00"
        android:key="updateTime"
        android:summary="You will be notified at @value o&apos;clock"
        android:title="@string/notificationTime" />

</PreferenceScreen>